--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ashfak</title>
 </head>
 <body>
+    <h1 style="color: red; background-color: tomato; border: 1px solid goldenrod;">My first website</h1>
     <p>Ashfak can become a good person.</p>
 </body>
 </html>
